--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run demo1",
-    "demo1": "electron ./demo1/main.js"
+    "demo1": "electron ./demo1/main.js",
+    "demo2": "electron ./demo2/main.js"
   },
   "repository": {
     "type": "git",
